@@ -151,7 +151,8 @@
         <zkclient.version>0.5</zkclient.version>
         <zookeeper.version>3.8.4</zookeeper.version>
         <zstd.version>1.5.0-4</zstd.version>
-        <lucene.version>9.10.0</lucene.version>
+        <lucene8.version>8.11.1</lucene8.version>
+        <lucene9.version>9.10.0</lucene9.version>
 
         <!-- Maven plugins versions -->
         <maven.javadoc.plugin.version>2.10.4</maven.javadoc.plugin.version>
@@ -906,6 +907,12 @@
                                 <arg>java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED</arg>
                                 <arg>--add-exports</arg>
                                 <arg>jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</arg>
+                                <arg>--add-exports</arg>
+                                <arg>java.base/sun.security.ssl=ALL-UNNAMED</arg>
+                                <arg>--add-exports</arg>
+                                <arg>java.base/sun.net.util=ALL-UNNAMED</arg>
+                                <arg>--add-exports</arg>
+                                <arg>java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED</arg>
                             </compilerArgs>
                         </configuration>
                     </plugin>
